find_package(Doxygen)
if (DOXYGEN_FOUND)
  unset(DOX_ENABLED_SECTIONS)
  set(DOX_HTML_OUTPUT_DIR public)
  set(DOX_INPUT_DOC "doc/src/public")
  set(DOX_INPUT_SRC "src/lib")
  set(DOX_EXCLUDE_PATTERNS "*_p.h")
  set(DOX_EXCLUDE_SYMBOLS "*Private")
  set(DOX_INCLUDE_INTERNAL NO)
  set(DOX_PROJECT_BRIEF "Native Qt library for Pokit devices")
  configure_file(doxyfile.in public.doxy)
  add_custom_target(doc COMMAND ${DOXYGEN_EXECUTABLE} public.doxy)

  set(DOX_ENABLED_SECTIONS internal)
  set(DOX_HTML_OUTPUT_DIR internal)
  set(DOX_INPUT_DOC "doc/src/internal")
  set(DOX_INPUT_SRC "src")
  unset(DOX_EXCLUDE_PATTERNS)
  unset(DOX_EXCLUDE_SYMBOLS)
  set(DOX_INCLUDE_INTERNAL YES)
  set(DOX_PROJECT_BRIEF "Internal development documentation")
  configure_file(doxyfile.in internal.doxy)
  add_custom_target(doc-internal COMMAND ${DOXYGEN_EXECUTABLE} internal.doxy)
endif()
